# agua

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  PROGRESS_LOG.md  README.md
agua-cli/: Cargo.toml
agua-cli/src/: main.rs
agua-core/: Cargo.toml
agua-core/benches/: throughput.rs
agua-core/src/: codec.rs  config.rs  detect.rs  embed.rs  error.rs  fft.rs  frame.rs  key.rs  lib.rs  parallel.rs  patchwork.rs  payload.rs  preprocess.rs  stream.rs  sync.rs
agua-core/tests/: acoustic_simulation.rs  lossy_codec_round_trip.rs  parameter_tuning.rs  wav_round_trip.rs
agua-gst/: Cargo.toml
agua-gst/src/: embed.rs  lib.rs
agua-web/: Cargo.toml  README.md  build.sh  generate-demos.sh  serve.sh
agua-web/src/: lib.rs
agua-web/static/: app.js  index.html  processor.js  worker.js
