[package]
name = "agua-core"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Audio watermarking library using patchwork algorithm in FFT domain"

[features]
parallel = ["rayon"]

[dependencies]
realfft = "3.5"
aes = "0.8"
cipher = "0.5"
thiserror = "2"
rayon = { version = "1.10", optional = true }

[dev-dependencies]
hound = "3.5"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
rayon = "1.10"

[[bench]]
name = "throughput"
harness = false
