[package]
name = "agua-gst"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"

description = "GStreamer plugin for agua audio watermarking"
repository = "https://github.com/eyevinn/agua"

[lib]
name = "gstaguawatermark"
crate-type = ["cdylib", "rlib"]

[dependencies]
agua-core = { path = "../agua-core" }
once_cell = "1"

gstreamer = "0.25"
gstreamer-base = "0.25"
gstreamer-audio = "0.25"

